--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>The Basic Language of the web: HTML</title>
-</head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>The Basic Language of the web: HTML</title>
+  </head>
 
-<body>
+  <body>
     <!--
     <h1>The Basic Language of the web: HTML</h1>
     <h2>The Basic Language of the web: HTML</h2>
@@ -14,16 +15,65 @@
     <h6>The Basic Language of the web: HTML</h6>
     -->
     <h1>📘 The Code Magazine</h1>
-    <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
     <h2>The Basic Language of the web: HTML</h2>
-    <p>All modern websites and web applications are built using three<em> fundamental </em>technologies: HTML, CSS and JavaScript. These are the languages of the web.</p>
-    <p>In this post, let's focus on HTML. We will learn what HTML is all about, and why you too should learn it.</p>
-    <h3>What is HTML?</h3>
-    <p>HTML stands for<strong> H</strong>yper<strong>T</strong>ext Markup Language. It's a markup language that web developers use to structure and describe the content of a webpage (not a programming language).</p>
 
-    <p>HTML consists of elements that describe different types of content: paragraphs, links, headings, images, video, etc. Web browsers understand HTML and render HTML code as websites.</p>
+    <img
+      src="laura-jones.jpg"
+      alt="Laura-Jones-Writer"
+      width="50"
+      height="50"
+    />
+    <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+
+    <img
+      src="post-img.jpg"
+      alt="HTML code on a screen"
+      width="500"
+      height="200"
+    />
+    <p>
+      All modern websites and web applications are built using three<em>
+        fundamental </em
+      >technologies: HTML, CSS and JavaScript. These are the languages of the
+      web.
+    </p>
+    <p>
+      In this post, let's focus on HTML. We will learn what HTML is all about,
+      and why you too should learn it.
+    </p>
+    <h3>What is HTML?</h3>
+    <p>
+      HTML stands for<strong> H</strong>yper<strong>T</strong>ext Markup
+      Language. It's a markup language that web developers use to structure and
+      describe the content of a webpage (not a programming language).
+    </p>
+
+    <p>
+      HTML consists of elements that describe different types of content:
+      paragraphs, links, headings, images, video, etc. Web browsers understand
+      HTML and render HTML code as websites.
+    </p>
+    <p>In HTML, each element is made up of 3 parts:</p>
+    <ol>
+      <li>The opening tag</li>
+      <li>The closing tag</li>
+      <li>The actual element</li>
+    </ol>
 
     <h3>Why should you learn HTML?</h3>
+    <p>
+      There are countless reasons for learning the fundamental language of the
+      web. Here are 5 of them:
+    </p>
+    <ul>
+      <li>To be able to use the fundamental web dev language</li>
+      <li>
+        To hand-craft beautiful websites instead of relying on tools like
+        Worpress or Wix
+      </li>
+      <li>To build web applications To impress friends To have fun 😃</li>
+    </ul>
 
-</body>
+    <p>Hopefully you learned something new here. See you next time!</p>
+  </body>
 </html>
