--- a/index.html
+++ b/index.html
@@ -14,66 +14,86 @@
     <h5>The Basic Language of the web: HTML</h5>
     <h6>The Basic Language of the web: HTML</h6>
     -->
-    <h1>📘 The Code Magazine</h1>
-    <h2>The Basic Language of the web: HTML</h2>
+    <header>
+      <h1>📘 The Code Magazine</h1>
+      <nav>
+        <a href="blog.html">Blog</a>
+        <a href="#">Challenges</a>
+        <a href="#">Flexbox</a>
+        <a href="#">CSS Grid</a>
+      </nav>
+    </header>
+    <article>
+      <header>
+        <h2>The Basic Language of the web: HTML</h2>
 
-    <img
-      src="laura-jones.jpg"
-      alt="Laura-Jones-Writer"
-      width="50"
-      height="50"
-    />
-    <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <img
+          src="laura-jones.jpg"
+          alt="Laura-Jones-Writer"
+          width="50"
+          height="50"
+        />
+        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
 
-    <img
-      src="post-img.jpg"
-      alt="HTML code on a screen"
-      width="500"
-      height="200"
-    />
-    <p>
-      All modern websites and web applications are built using three<em>
-        fundamental </em
-      >technologies: HTML, CSS and JavaScript. These are the languages of the
-      web.
-    </p>
-    <p>
-      In this post, let's focus on HTML. We will learn what HTML is all about,
-      and why you too should learn it.
-    </p>
-    <h3>What is HTML?</h3>
-    <p>
-      HTML stands for<strong> H</strong>yper<strong>T</strong>ext Markup
-      Language. It's a markup language that web developers use to structure and
-      describe the content of a webpage (not a programming language).
-    </p>
+        <img
+          src="post-img.jpg"
+          alt="HTML code on a screen"
+          width="500"
+          height="200"
+        />
+      </header>
+      <p>
+        All modern websites and web applications are built using three<em>
+          fundamental </em
+        >technologies: HTML, CSS and JavaScript. These are the languages of the
+        web.
+      </p>
+      <p>
+        In this post, let's focus on HTML. We will learn what HTML is all about,
+        and why you too should learn it.
+      </p>
+      <h3>What is HTML?</h3>
+      <p>
+        HTML stands for<strong> H</strong>yper<strong>T</strong>ext Markup
+        Language. It's a markup language that web developers use to structure
+        and describe the content of a webpage (not a programming language).
+      </p>
 
-    <p>
-      HTML consists of elements that describe different types of content:
-      paragraphs, links, headings, images, video, etc. Web browsers understand
-      HTML and render HTML code as websites.
-    </p>
-    <p>In HTML, each element is made up of 3 parts:</p>
-    <ol>
-      <li>The opening tag</li>
-      <li>The closing tag</li>
-      <li>The actual element</li>
-    </ol>
+      <p>
+        HTML consists of elements that describe different types of content:
+        paragraphs, links, headings, images, video, etc. Web browsers understand
+        HTML and render HTML code as websites.
+      </p>
+      <p>In HTML, each element is made up of 3 parts:</p>
+      <ol>
+        <li>The opening tag</li>
+        <li>The closing tag</li>
+        <li>The actual element</li>
+      </ol>
+      <p>
+        You can learn more at
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+          target="_blank"
+          >MDN Web Docs</a
+        >
+      </p>
+      <h3>Why should you learn HTML?</h3>
+      <p>
+        There are countless reasons for learning the fundamental language of the
+        web. Here are 5 of them:
+      </p>
+      <ul>
+        <li>To be able to use the fundamental web dev language</li>
+        <li>
+          To hand-craft beautiful websites instead of relying on tools like
+          Worpress or Wix
+        </li>
+        <li>To build web applications To impress friends To have fun 😃</li>
+      </ul>
 
-    <h3>Why should you learn HTML?</h3>
-    <p>
-      There are countless reasons for learning the fundamental language of the
-      web. Here are 5 of them:
-    </p>
-    <ul>
-      <li>To be able to use the fundamental web dev language</li>
-      <li>
-        To hand-craft beautiful websites instead of relying on tools like
-        Worpress or Wix
-      </li>
-      <li>To build web applications To impress friends To have fun 😃</li>
-    </ul>
-
-    <p>Hopefully you learned something new here. See you next time!</p>
+      <p>Hopefully you learned something new here. See you next time!</p>
+    </article>
+    <footer>Copyright &copy; by The Code Magazine</footer>
   </body>
 </html>
