--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>The Basic Language of the web: HTML</h2>
 
         <img
-          src="laura-jones.jpg"
+          src="img/laura-jones.jpg"
           alt="Laura-Jones-Writer"
           width="50"
           height="50"
@@ -36,7 +36,7 @@
         <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
 
         <img
-          src="post-img.jpg"
+          src="img/post-img.jpg"
           alt="HTML code on a screen"
           width="500"
           height="200"
@@ -94,6 +94,37 @@
 
       <p>Hopefully you learned something new here. See you next time!</p>
     </article>
+    <aside>
+      <h4>Related Posts</h4>
+      <ul>
+        <li>
+          <img
+            src="img/related-1.jpg"
+            alt="Person coding on screen"
+            width="50"
+            height="50"
+          />
+          <a href="#">How to Learn Web Development</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <img src="img/related-2.jpg" alt="Thunder" width="50" height="50" />
+          <a href="#">The unknown Power of CSS</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <img
+            src="img/related-3.jpg"
+            alt="Code on screen"
+            width="50"
+            height="50"
+          />
+          <a href="#">Why JavaScript is awesome</a>
+        </li>
+      </ul>
+    </aside>
     <footer>Copyright &copy; by The Code Magazine</footer>
   </body>
 </html>
